# 2017-ADC

./: CMakeLists.txt  DiodeClipperFilter.cpp  DiodeClipperFilter.h  DiodeClipperFilter_v0.cpp  DiodeClipperFilter_v0.h  DiodeClipperFilter_v1.cpp  DiodeClipperFilter_v1.h  DiodeClipperFilter_v2.cpp  DiodeClipperFilter_v2.h  DiodeClipperFilter_v3.cpp  DiodeClipperFilter_v3.h  DiodeClipperFilter_v4.cpp  DiodeClipperFilter_v4.h  DiodeClipperFilter_v5.cpp  DiodeClipperFilter_v5.h  DiodeClipperFilter_v6.cpp  DiodeClipperFilter_v6.h  README.md  main.cpp
